<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.filter_settings.fragments.SelectLocationFragment">

    <ru.practicum.android.diploma.ui.common.HHToolbar
        android:id="@+id/toolbar"
        style="@style/Medium22TextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:drawableNavigation="@drawable/ic_arrow_back_24px"
        app:titleText="@string/select_location_title" />

    <ru.practicum.android.diploma.ui.common.FloatingLabelTextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flt_hint="@string/select_location_country_hint"
        app:flt_iconEmpty="@drawable/ic_arrow_forward_24px"
        app:flt_iconFilled="@drawable/ic_clear_24px" />

    <ru.practicum.android.diploma.ui.common.FloatingLabelTextView
        android:id="@+id/area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:flt_hint="@string/select_location_area_hint"
        app:flt_iconEmpty="@drawable/ic_arrow_forward_24px"
        app:flt_iconFilled="@drawable/ic_clear_24px" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_apply"
            style="@style/FilterButton"
            android:layout_marginHorizontal="@dimen/padding16"
            android:layout_marginBottom="@dimen/padding24"
            android:background="@drawable/btn_background"
            android:backgroundTint="@color/yp_blue"
            android:text="@string/select_location_select_button" />
    </LinearLayout>

</LinearLayout>
