<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/padding16"
    android:layout_marginVertical="9dp"
    android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="@dimen/vacancy_item_size"
        android:layout_height="@dimen/vacancy_item_size"
        android:layout_gravity="top"
        android:backgroundTint="@android:color/transparent"
        app:cardCornerRadius="@dimen/vacancy_logo_corner_radius"
        app:cardElevation="0dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false"
        app:strokeColor="@color/yp_light_gray"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/vacancy_card_placeholder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@null"
            android:scaleType="centerInside"
            android:src="@drawable/ic_placeholder_32px" />
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/padding12"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vacancy_name_card"
            style="@style/Medium22TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:textColor="?textColorPrimary"
            tools:text="@string/filter_parameters_location_hint" />

        <TextView
            android:id="@+id/vacancy_industry_card"
            style="@style/Regular16TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="?textColorPrimary"
            tools:text="@string/filter_parameters_industries_hint" />

        <TextView
            android:id="@+id/vacancy_salary_card"
            style="@style/Regular16TextAppearance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textColor="?textColorPrimary"
            tools:text="@string/filter_parameters_salary_bottom_hint" />
    </LinearLayout>
</LinearLayout>

