<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.filter_settings.fragments.SelectIndustriesFragment">

    <Toolbar
        android:id="@+id/toolbar"
        style="@style/Medium22TextAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_back_24px"
        android:title="@string/select_location_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/country_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/country_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding20"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/country_hint"
                style="@style/Regular16TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_location_country_hint"
                android:textColor="@color/yp_gray" />

            <TextView
                android:id="@+id/country_name"
                style="@style/Regular16TextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/yp_black"
                android:visibility="gone" />
        </LinearLayout>

        <ImageView
            android:id="@+id/arrow_country"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foregroundGravity="center_vertical"
            android:padding="@dimen/padding12"
            android:src="@drawable/ic_arrow_forward_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/area_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/area_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/padding20"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/area_hint"
                style="@style/Regular16TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location_area_hint"
                android:textColor="@color/yp_gray" />

            <TextView
                android:id="@+id/area_name"
                style="@style/Regular16TextAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:textColor="@color/yp_black"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/area_hint" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/padding12"
            android:src="@drawable/ic_arrow_forward_24px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

